# RunicVTT

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  OLD_CMakeSettings.json  README.md  RunicVTT.sln  RunicVTT.vcxproj  RunicVTT.vcxproj.filters  imgui.ini  main_t.md
.github/workflows/: build_doxygen_and_publish.yml  release-application.yml
GameTables/123123/: 123123.runic
GameTables/ASDASD/: ASDASD.runic
GameTables/CampanhaRunic/: CampanhaRunic.runic
GameTables/CampanhaRunic/Boards/: MapaPhandalin.runic
GameTables/Chat/: Chat.runic
GameTables/ChatNetwork/: ChatNetwork.runic
GameTables/ChatNetwork/Boards/: fortaleza.runic
GameTables/ChatTest/: ChatTest.runic
GameTables/Gravacao/: Gravacao.runic
GameTables/Gravacao/Boards/: Barcos.runic
GameTables/Hamachi/: Hamachi.runic
GameTables/IceSpire/: IceSpire.runic
GameTables/IceSpire/Boards/: teste.runic
GameTables/MesaIceSpire/: MesaIceSpire.runic
GameTables/MesaIceSpire/Boards/: MapaFloresta.runic  MapaPhandalin.runic
GameTables/SerializadorTeste/: SerializadorTeste.runic
GameTables/SerializadorTeste/Boards/: SerializadorBoard.runic  TestLoadBoard.runic
GameTables/Teste/: Teste.runic
GameTables/aaaaaa/: aaaaaa.runic
GameTables/asdasdasd/: asdasdasd.runic
GameTables/dsadf/: dsadf.runic
GameTables/erteste/: erteste.runic
GameTables/ghnghj/: ghnghj.runic
GameTables/sdfsdfsdf/: sdfsdfsdf.runic
GameTables/twse/: twse.runic
GameTables/ytutyj/: ytutyj.runic
MarkdownEditor/: MarkdownEditor.vcxproj
Network/: Network.vcxproj
RunicVTT/: READEME.md  RunicVTT.vcxproj  RunicVTT.vcxproj.filters  imgui.ini  main_cherno.cpp  main_t.cpp
RunicVTT/Debug/: vc143.idb
RunicVTT/Debug/RunicVTT.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RunicVTT.lastbuildstate
RunicVTT/res/shaders/: Shader.glsl
RunicVTT/src/: Application.cpp  Application.h  ApplicationHandler.cpp  ApplicationHandler.h  Board.cpp  Board.h  Chat.h  DirectoryWindow.h  GameTable.cpp  GameTable.h  MainWindow.cpp  MainWindow.h  Marker.cpp  Marker.h  Window.cpp  Window.h  main.cpp
RunicVTT/src/OLD/: Application.cpp  ApplicationHandler.cpp  ApplicationHandler.h  Camera.h
RunicVTT/src/renderer/: Renderer.h  Shader.cpp  Texture.cpp  Texture.h
RunicVTT/src/utils/: Window.cpp
RunicVTT/x64/Debug/: RunicVTT.exe.recipe  application.obj.enc  boardmanager.new.obj.enc  boardmanager.obj.enc  gametablemanager.new.obj.enc  gametablemanager.obj.enc  glm.cppm.ifc.d.json  glm.cppm.ifc.dt.module.json  glm.cppm.ifc.dt.module.json.command  glm.cppm.module.json  main.obj.enc  renderer.obj.enc  vc143.idb
RunicVTT/x64/Debug/RunicVTT.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RunicVTT.lastbuildstate  (+4 more)
cmake/: SignAllExecutables.cmake  SignArtifacts.cmake
docs/: ConsoleUtils_OLD.cpp  EpochArbiter.h
docs/html/: _application_handler_8cpp.html  _application_handler_8cpp__incl.dot  _application_handler_8cpp_source.html  _application_handler_8h.html  _application_handler_8h.js  _application_handler_8h__dep__incl.dot  _application_handler_8h__incl.dot  _application_handler_8h_source.html  _asset_i_o_8h.html  _asset_i_o_8h.js  _asset_i_o_8h__dep__incl.dot  _asset_i_o_8h__incl.dot  _asset_i_o_8h_source.html  _board_manager_8cpp.html  _board_manager_8cpp__incl.dot  _board_manager_8cpp_source.html  _board_manager_8h.html  _board_manager_8h.js  _board_manager_8h__dep__incl.dot  _board_manager_8h__incl.dot  _board_manager_8h_source.html  _chat_manager_8cpp.html  _chat_manager_8cpp__incl.dot  _chat_manager_8cpp_source.html  _chat_manager_8h.html  _chat_manager_8h.js  _chat_manager_8h__dep__incl.dot  _chat_manager_8h__incl.dot  _chat_manager_8h_source.html  _components_8h.html  _components_8h.js  _components_8h__dep__incl.dot  _components_8h__incl.dot  _components_8h_source.html  _debug_actions_8h.html  _debug_actions_8h.js  _debug_actions_8h__dep__incl.dot  _debug_actions_8h__incl.dot  _debug_actions_8h_source.html  _debug_console_8h.html  (+989 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+124 more)
enc_temp_folder/e42bbc9ee7f0ddfe64fa225dd57a62ba/: NetworkManager.cpp
include/: ApplicationHandler.h  AssetIO.h  Board.h  BoardManager.h  Chat.h  ChatManager.h  Components.h  ConsoleUtils.h  DirectoryWindow.h  GameTable.h  GameTableManager.h  IdentityManager.h  ImGuiToaster.h  Marker.h  Message.h  NetworkManager.h  NetworkManager_OLD.h  PathManager.h  Serializer.h  UiTypingGuard.h
include/debug/: DebugActions.h  DebugConsole.h  Logger.h
include/network/: ChatManager.h  EpochArbiter.h  FirewallUtils.h  Message.h  MessageQueue.h  NetworkManager.h  NetworkUtilities.h  PeerConnection.h  PeerLink.h  Serializer.h  SignalingClient.h  SignalingServer.h  UPnPManager.h
include/note_editor/: MarkdownRenderer.h  MarkerRenderer.h  NoteEditorUI.h  NoteManager.h  NoteSyncSystem.h  NotesManager.h  imgui_md.h  md4c.h
include/renderer/: IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
res/shaders/: Basic.shader  GridShader.shader
src/: ApplicationHandler.cpp  Application_OLD.cpp  Board.cpp  BoardManager.cpp  ChatManager.cpp  GameTable.cpp  GameTableManager.cpp  IdentityManager.cpp  Marker.cpp  NetworkManager.cpp  NetworkManager_OLD.cpp  main.cpp
src/network/: NetworkManager.cpp  PeerLink.cpp  SignalingClient.cpp  SignalingServer.cpp
src/note_editor/: MarkdownRenderer.cpp  NoteEditorUI.cpp  NoteManager.cpp  NoteSyncSystem.cpp  NotesManager.cpp  imgui_md.cpp  md4c.c
src/renderer/: IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Texture.cpp  VertexArray.cpp
x64/Debug/: RunicVTT.exp  RunicVTT.lib
(+69 files in other folders)
